flux/apps/paperless-ngx/paperless-ngx.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paperless-ngx

spec:
  selector:
    matchLabels:
      app: paperless-ngx

  replicas: 1

  template:
    metadata:
      labels:
        app: paperless-ngx

    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: export
          persistentVolumeClaim:
            claimName: export
        - name: consume
          persistentVolumeClaim:
            claimName: consume

      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          volumeMounts:
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/export
              name: export
            - mountPath: /usr/src/paperless/consume
              name: consume
