flux/apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx

spec:
  selector:
    app: paperless-ngx

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
